[package]
name = "bp_patterns"
authors = ["Cockpit Cutie <cockpitcutie@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A composable library for generating patterns for buttplug devices."
readme = "README.md"
repository = "https://github.com/CockpitCutie/buttplug-patterns"

[dependencies]
buttplug = "9.0.8"
rand = "0.9.1"
tokio = {version="1", features=["rt-multi-thread"]}
