[package]
name = "buttplug_patterns"
authors = ["Cockpit Cutie <cockpitcutie@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A composable library for generating patterns for buttplug devices."
readme = "README.md"
repository = "https://github.com/CockpitCutie/buttplug-patterns"
keywords = ["teledildonics", "haptics", "async", "signal-processing"]

[dependencies]
buttplug = ">=9.0.8"
rand = ">=0.9"
tokio = {version="1", features=["rt-multi-thread"]}
